# mvlissa

./: git-commit.sh  readme.txt
project/: CMakeLists.txt  compileshaders.sh  cppfiles.mk  makefile
project/GLline/: CLineData.cpp  CLineStrip.cpp  CPointData.cpp  CPointObject.cpp  CRingData.cpp
project/include/: CFileIO.h  CGL_Basic.h  CGL_Context.h  CGL_Shader.h  CHexConv.hpp  CPixel24.h  CRandom.hpp  CRectT.hpp  CSdlApp.h  CVector2T.h  CVector2T.hpp  NGlobalLog.h  NStringTool.h  NUtf.h  SVertArray.h  template_macros.hpp
project/include/GLline/: CLineStrip.h  CPointObject.h  StaticLineHelp.hpp
project/lib/: ALT_CUtf.cpp  CFileIO.cpp  CGL_Basic.cpp  CGL_Context.cpp  CGL_Freetype.cpp  CGL_Shader.cpp  CGL_Shader_Texture.cpp  CPixel24.cpp  CSdlApp.cpp  NGlobalLog-Desktop.cpp  NUtf.cpp  PnglibInterface.c
project/lib/shader/: shader_blurline_frag.cpp  shader_blurline_frag.shader  shader_blurline_vert.cpp  shader_blurline_vert.shader  shader_color_frag.cpp  shader_color_frag.shader  shader_color_vert.cpp  shader_color_vert.shader  shader_noise_frag.cpp  shader_noise_frag.shader  shader_noise_vert.cpp  shader_noise_vert.shader  shader_texture_frag.cpp  shader_texture_frag.shader  shader_texture_vert.cpp  shader_texture_vert.shader
project/source/: CContextLissa.cpp  CContextLissa.h  CPlayObject.h  CSDLblurline.cpp  CSDLblurline.h  mainSdl.cpp
